Fix line wrapping and text select on library file preview

--- a/app/stylesheets/builtin-pages/library.less
+++ b/app/stylesheets/builtin-pages/library.less
@@ -555,7 +555,8 @@ body.drag {
         overflow-x: auto;
 
         .text {
-          white-space: pre-wrap;
+          white-space: pre;
+          user-select: initial
         }
       }
 
